fixed shifting navbar
used to turn red when held down

--- a/P02 Project/css/main.css
+++ b/P02 Project/css/main.css
@@ -208,11 +208,6 @@ code {
   transition-duration: 0s;
 }
 
-.button-nav:active {
-  color: #CD3B28;
-  font-weight: 500;
-}
-
 .button-submit {
   display: inline-block;
   padding: 1.25em 3em 1.25em 3em;
